# cunittest

./: CMakeLists.txt  CUnitAutomated-Results.xml  README.md  add.c  libcunit.so.1  main.c  unitTest
add/include/: add.h
add/src/: add.c
test/: unitTest.c
